Corrects the alignment of "Testimonial"

--- a/resources/css/landingpage.css
+++ b/resources/css/landingpage.css
@@ -262,7 +262,7 @@ nav {
 }
 
 .container3 p {
-    transform: rotate(90deg);
+    transform: rotate(-90deg);
     color: #F6FFFA;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 75px;
